# libnss_nisplus

./: .gitignore  ChangeLog  NEWS  README  configure.ac
src/: Makefile.am  libnss_nisplus.map  nisplus-alias.c  nisplus-ethers.c  nisplus-grp.c  nisplus-hosts.c  nisplus-initgroups.c  nisplus-netgrp.c  nisplus-network.c  nisplus-proto.c  nisplus-publickey.c  nisplus-pwd.c  nisplus-rpc.c  nisplus-service.c  nisplus-spwd.c  nss-nisplus.c  nss-nisplus.h  nss_loader-test.c
